--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start:server": "json-server --watch db.json --port 3005"
+    "start:server": "json-server --watch db.json --port 3005",
+    "test": "npx vitest --watch"
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
